--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-frontend": "cd ../social-scheduler && npm install && npm run build",
+    "postinstall": "npm run build-frontend"
   },
   "author": "",
   "license": "ISC",
