--- a/social-scheduler/package.json
+++ b/social-scheduler/package.json
@@ -13,6 +13,8 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.15",
     "axios": "^1.8.4",
