--- a/social-scheduler/package.json
+++ b/social-scheduler/package.json
@@ -14,12 +14,16 @@
   },
   "dependencies": {
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.15",
     "axios": "^1.8.4",
+    "emoji-picker-react": "^4.12.2",
+    "form-data": "^4.0.2",
     "framer-motion": "^12.6.3",
     "gh-pages": "^6.3.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
